--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sanitize-filename": "^1.6.3",
-    "yt-dlp": "^2025.3.9"
+    "youtube-dl-exec": "^3.0.21"
   }
 }
