--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sanitize-filename": "^1.6.3",
-    "youtube-dl-exec": "^3.0.21"
+    "youtube-dl-exec": "^3.0.21",
+    "yt-dlp-exec": "^1.0.2"
   }
 }
