--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "ytmp3-render",
+  "name": "youtube-downloader",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "chmod +x render-build.sh && ./render-build.sh",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "sanitize-filename": "^1.6.3",
-    "youtube-dl-exec": "^3.0.21",
-    "yt-dlp-exec": "^1.0.2"
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
