--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "youtube-downloader",
   "version": "1.0.0",
   "main": "server.js",
+
   "scripts": {
     "start": "node server.js",
-    "build": "chmod +x render-build.sh && ./render-build.sh",
+    "build": "./render-build.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
   "dependencies": {
     "express": "^4.18.2"
   },
