--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "youtube-downloader",
   "version": "1.0.0",
   "main": "server.js",
-  
   "scripts": {
     "start": "node server.js",
-    "build": "python3 -m pip install --user yt-dlp && mkdir -p temp",
-    "postinstall": "node -v && npm -v"
+    "build": "mkdir -p temp && chmod +x bin/yt-dlp",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "dependencies": {
     "express": "^4.18.2"
   },
